sphinx/source/_static/custom.css
* {
    font-variant-ligatures: none;
}

.version-alert a {
    text-decoration: underline;
    color: #ddd;
}

#banner .version-alert {
    background-color: #CF462A;
    padding: 1em;
    color: #fff;
    font-family: "Work Sans", sans-serif;
    font-weight: 600; font-size: 16px;
}

.version-alert a {
    text-decoration: underline;
    color: #ddd;
}

#banner .news-alert {
    background-color: #ECD078;
    padding: 1em;
    font-family: "Work Sans", sans-serif;
    font-weight: 600; font-size: 16px;
}

.news-alert a {
    text-decoration: underline;
    color: #444;
}

.btn { font-family: "Lato", sans-serif; }

.btn-primary { filter: brightness(90%); background-color: #C02942; border-color: #C02942; }
.btn-primary:hover { filter: brightness(100%); background-color: #C02942; border-color: #C02942; }

.links { background-color: #542437; color: #fff; font-family: "Lato", sans-serif; }
.links h6 { font-family: "Work Sans", sans-serif; font-weight: 700; font-size: 14px; }
.links ul.nav li a { padding: 3px 0; font-family: "Lato", sans-serif; font-size: 13px; color: #fff; }

.links-item { margin-top: 30px; }

.footer-copy p { background-color: #242729; color: #eee; font-family: "Lato", sans-serif; font-size: 12px; padding: 10px 0; }
.footer-copy p { color: #eee; padding: 0; margin: 0; }

ul.gallery li {
    list-style-type: none;
    float:left
}

img.gallery {
    width: 200px;
    height:200px
}

a { color: #CF462A; }

code {
    font-family: SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,monospace;
    color: rgb(33, 37, 41);
    padding: 2px 1px 0px 1px;
    font-size: 80%;
    background-color:#eef0f1;
}

/* Custom styles for documentation landing page (index.rst) and other pages
using sphinx_panels */

.bokeh-examples {
    padding: 0px;
}

.bokeh-examples img {
    width: 100%;
    height: 100%;
}

.bg-bokeh-one {
    background-color: rgba(246,169,27,0.3);
}

.bg-bokeh-two {
    background-color: rgba(165,205,57,0.3);
}

.bg-bokeh-three {
    background-color: rgba(0,170,174,0.3);
}

.bg-bokeh-four {
    background-color: rgba(240,82,35,0.3);
}

.bg-bokeh-five {
    background-color: rgba(138,40,137,0.3);
}

.bg-bokeh-six {
    background-color: rgba(32,178,84,0.3);
}

.bg-bokeh-seven {
    background-color: rgba(236,21,87,0.3);
}

.card-header p {
    font-weight: 600;
    font-size: 125%;
}

.card-text a {
    font-weight: 600;
}

@media (max-width: 575px) {
    .examples-container .d-flex {
        width: 25%;
    }
}

/* customize highlight color for sphinx code blocks */
.highlight .hll {
    background-color: rgba(246,169,27,0.3);
}

/* style links */
.links {
    background-color: #542437;
    color: #fff;
}

.links h6 {
    font-weight: 700;
    font-size: 14px;
    color: #fff;
}

.links ul.nav li a {
    padding: 3px 0;
    font-family: "Lato", sans-serif;
    font-size: 13px;
    color: #fff;
}

.links-item { margin-top: 30px; }

/* style footer */

.footer-copy {
    background-color: #242729;
    color: #eee;
    font-size: 12px;
    padding: 10px 0; }

.footer-copy p {
    padding: 0;
    margin: 0;
}

